test_suite/tests/ui/strict-or-some-other-name/tuple-struct.stderr
error: #[serde(strict_or_some_other_name)] can only be used on structs with named fields
 --> tests/ui/strict-or-some-other-name/tuple-struct.rs:4:9
  |
4 | #[serde(strict_or_some_other_name)]
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^
